# moxi

./: .gitignore  CHANGES.standalone.md  CMakeLists.txt  README  README.standalone.md  build.sh
conflate/: conflate.c
contrib/: moxi.service  moxi.spec
libmemcached/libhashkit/: common.h
platform/: cbassert.h  platform.h
src/: agent_config.c  config.cmake.h  cproxy.h  hash.c  htgram.c  mcs.c  memcached.c  memcached.h  stats.c
vbucket/: cJSON.h
